Adding sell button functionality

--- a/index.html
+++ b/index.html
@@ -14,26 +14,29 @@
 		<h1></h1>
 		<div id = "apple" class ="fruitBox">
 			<img src=apple.png alt="Apple">
-			<button type="button" >Buy Apple!</button>
+			<button type="button" id="buttonBuyApple" >Buy Apple!</button>
+			<button type="button" id="buttonSellApple" >Sell Apple</button>
 			<h3 id="priceApple"></h3>
 			<h4 id="appleInventory"></h4>
 		</div>
 		<div id = "orange" class ="fruitBox">
 			<img src=orange.png alt="Orange">
-			<button type="button">Buy Orange!</button>
+			<button type="button" id="buttonBuyOrange">Buy Orange!</button>
+			<button type="button" id="buttonSellOrange">Sell Orange</button>
 			<h3 id="priceOrange"></h3>
 			<h4 id="orangeInventory"></h4>
 		</div>
 		<div id = "banana" class ="fruitBox">
 			<img src=bananas.png alt="Banana">
-			<button type="button">Buy Banana!</button>
+			<button type="button" id="buttonBuyBanana">Buy Banana!</button>
+			<button type="button" id="buttonSellBanana">Sell Banana</button>
 			<h3 id="priceBanana"></h3>
 			<h4 id="bananaInventory"></h4>
 		</div>
-
 		<div id = "pear" class ="fruitBox">
 			<img src=pear.png alt="Pear">
-			<button type="button">Buy Pear!</button>
+			<button type="button" id="buttonBuyPear">Buy Pear!</button>
+			<button type="button" id="buttonSellPear">Sell Pear</button>
 			<h3 id="pricePear"></h3>
 			<h4 id="pearInventory"></h4>
 		</div>
